--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python: 3.6
 
-install: python setup.py install
+install: 
+    - python setup.py install
+    - pip install doctest
 
 script: doctest
